# fnewscrawler

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  keep-alive.sh  main.py  pyproject.toml  render.yaml
.github/workflows/: docker-base-image.yml  docker-image.yml  keep-alive.yml
docker/: Dockerfile  Dockerfile-base  README.md  start.sh
docs/: get_api.md  mcp_tool_development.md  spider_development.md
fnewscrawler/: __init__.py
fnewscrawler/core/: __init__.py  browser.py  context.py  news_crawl.py  qr_login_base.py  redis_manager.py  tushare_data_provider.py
fnewscrawler/mcp/: __init__.py  mcp_manager.py
fnewscrawler/mcp/akshare/: __init__.py  chip.py  daily.py  funds.py  news.py  report.py  stock_comment.py
fnewscrawler/mcp/common/: __init__.py  news_crawl.py
fnewscrawler/mcp/eastmoney/: __init__.py  base_info.py  big_market_funds.py  block_trade.py  dragon_tiger_details.py  industry_funds.py
fnewscrawler/mcp/indicator/: __init__.py  atr.py  boll.py  daily.py  kdj.py  ma.py  macd.py  rsi.py  vwma.py
fnewscrawler/mcp/iwencai/: A_stock_selection.py  __init__.py  concept_funds.py  crawl.py  history_funds_flow.py  industry_funds.py  news_info_list.py  secu_margin_trading.py
fnewscrawler/mcp/tushare/: __init__.py  chip.py
fnewscrawler/mcp/wallstreetcn/: __init__.py  news.py
fnewscrawler/spiders/akshare/: __init__.py  chip.py  daily.py  news.py  report.py  stock_comment.py  super_fun.py
fnewscrawler/spiders/eastmoney/: __init__.py  base_info.py  big_market_funds.py  block_trade.py  dragon_tiger_details.py  industry_funds.py  login.py  utils.py
fnewscrawler/spiders/iwencai/: A_stock_selection.py  __init__.py  common_list.py  concept_funds.py  crawl.py  history_funds_flow.py  industry_funds.py  login.py  secu_margin_trading.py
fnewscrawler/spiders/other/: __init__.py  web_crawl.py
fnewscrawler/spiders/tushare/: __init__.py  chip.py
fnewscrawler/spiders/wallstreetcn/: __init__.py  news.py
fnewscrawler/utils/: __init__.py  logger.py  params.py  path.py  text_duplicate.py  url.py  user_agent.py
test/: login_api_test.py
test/core/: markdown_crawler_demo.py  news_crawl.py  redis_database.py
test/mcp/: test_mcp_manager.py
test/spiders/akshare/: chip.py  daily.py  news.py  stock_comment.py  super_fun.py
test/spiders/eastmoney/: base_info.py  big_market_funds.py  block_trade.py  dragon_tiger_details.py  industry_funds.py  login.py
test/spiders/iwencai/: A_stock_selection.py  common_list.py  concept_funds.py  history_funds_flow.py  industry_funds.py  iwencai_craw.py  iwencai_login_demo.py  secu_margin_trading.py
test/utils/: logger.py  test_url.py  text_duplicate.py
web/: README.md  app.py
web/api/: __init__.py  login.py  mcp.py  monitor.py  tools.py
web/templates/: base.html  index.html  login.html  mcp.html  monitor.html
(+5 files in other folders)
